--- a/avances.html
+++ b/avances.html
@@ -38,13 +38,15 @@
             <div class="dropdown">
                 <button class="dropbtn">Menu</button>
                 <nav class="dropdown-content">
-                    <a href="index.html">Home</a>
                     <a href="integrantes.html">Integrantes</a>
+                    <a href="avances.html">Avances</a>
                     <a href="juegos.html">Juegos</a>
+                    <a href="index.html">Menu</a>
                 </nav>
             </div>
-        </div>   
+        </div>
     </header>
+
     <!-- Main Section -->
     <div class="container my-5">
         <!-- Sección 3.1 - Presentación General de Trabajo Práctico -->
@@ -219,7 +221,7 @@
         <section class="py-4">
             <div class="container text-center">
                 <h2>Enlace al prototipo en Figma</h2>
-                <p><a href="https://www.figma.com/design/GaNJiwdzKCyuYunD7pBD51/Parcial2-Maqueta?node-id=0-1&t=8aDgbnHInoGAP9Fa-1" target="_blank">Prototipo en Figma</a></p>
+                <p><a href="https://www.figma.com/design/fv4TeOP1xfPMQNq0VFMQeE/FINAL?node-id=0-1&t=8Yjhljjd1LVEf1BT-0" target="_blank">Prototipo en Figma</a></p>
             </div>
         </section>
     </div>
