--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <a href="integrantes.html">Integrantes</a>
                     <a href="avances.html">Avances</a>
                     <a href="juegos.html">Juegos</a>
+                    <a href="index.html">Menu</a>
                 </nav>
             </div>
         </div>
