--- a/integrantes.html
+++ b/integrantes.html
@@ -32,13 +32,15 @@
             <div class="dropdown">
                 <button class="dropbtn">Menu</button>
                 <nav class="dropdown-content">
-                    <a href="index.html">Home</a>
+                    <a href="integrantes.html">Integrantes</a>
                     <a href="avances.html">Avances</a>
                     <a href="juegos.html">Juegos</a>
+                    <a href="index.html">Menu</a>
                 </nav>
             </div>
         </div>
     </header>
+
     <!-- Main Section -->
     <div class="container my-5">
         <h1 class="text-center">Integrantes</h1>
