--- a/juegos.html
+++ b/juegos.html
@@ -19,7 +19,7 @@
         <p class="light-dark">CLARO/OSCURO</p>
     </label>
     <!-- Header -->
-   <header>
+    <header>
         <div class="container-header">
             <div class="container-redes">
                 <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
@@ -34,13 +34,15 @@
             <div class="dropdown">
                 <button class="dropbtn">Menu</button>
                 <nav class="dropdown-content">
-                    <a href="index.html">Home</a>
                     <a href="integrantes.html">Integrantes</a>
                     <a href="avances.html">Avances</a>
+                    <a href="juegos.html">Juegos</a>
+                    <a href="index.html">Menu</a>
                 </nav>
             </div>
         </div>
     </header>
+
     <!-- Main Section - Juegos -->
     <div class="container my-5">
         <h1 class="text-center">Juegos</h1>
