--- a/avances.html
+++ b/avances.html
@@ -213,7 +213,7 @@
         <section class="py-4">
             <div class="container text-center">
                 <h2>Enlace al repositorio en GitHub</h2>
-                <p><a href="https://github.com/soutolucianab/TPO-Grupo7" target="_blank">Repositorio del sitio en GitHub</a></p>
+                <p><a href="https://github.com/Carpineiro17/FINAL-TPO" target="_blank">Repositorio del sitio en GitHub</a></p>
             </div>
         </section>
 
@@ -221,7 +221,7 @@
         <section class="py-4">
             <div class="container text-center">
                 <h2>Enlace al prototipo en Figma</h2>
-                <p><a href="https://www.figma.com/design/fv4TeOP1xfPMQNq0VFMQeE/FINAL?node-id=0-1&t=8Yjhljjd1LVEf1BT-0" target="_blank">Prototipo en Figma</a></p>
+                <p><a href="https://www.figma.com/design/fv4TeOP1xfPMQNq0VFMQeE/FINAL?node-id=0-1&t=lSavVWlOyft7BIAe-0" target="_blank">Prototipo en Figma</a></p>
             </div>
         </section>
     </div>
